--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
 </head>
 <body>
 
+<main class="container">
+    <form action="" class="wrapper" method="post" id="form">
+        <label for="email">Email:</label>
+        <input type="email" name="email" placeholder="Enter email" id="email" class="input" value="asergeev@flo.team">
+        <label for="password">Password:</label>
+        <input type="password" name="password" placeholder="Enter password" id="password" class="input"
+               value="jgF5tn4F">
+        <input type="submit" value="Sign In" id="submit" class="button">
+    </form>
+</main>
+
 </body>
 </html>
