feat: add scripts to index html
add into html scripts: constants, httpService, tokenService, authService

MODULE-1-PART-3-gallery-auth

--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
     </form>
 </main>
 
+<script src="js/constants.js"></script>
+<script src="js/httpService.js"></script>
+<script src="js/tokenService.js"></script>
+<script src="js/authService.js"></script>
+
 </body>
 </html>
